--- a/static/play.html
+++ b/static/play.html
@@ -9,13 +9,13 @@
 
 <html>
 	<head>
-		<title>Luckybytes - The provable fair Byteball Lottery</title>
+		<title>Luckybytes - The provable fair Obyte Lottery</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<meta name="description" content="Luckybytes - The provable fair Byteball Lottery">
-		<meta name="keywords" content="byteball, lottery, provable, fair, gamble, bytes, luckybytes" />
+		<meta name="description" content="Luckybytes - The provable fair Obyte Lottery">
+		<meta name="keywords" content="obyte, byteball, lottery, provable, fair, gamble, bytes, luckybytes" />
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
@@ -40,7 +40,7 @@
 						
 						<h1><i class="icon fa-ticket"></i></h1>
 						<h1>Luckybytes</h1>
-						<p>The provable fair Byteball Lottery</p>
+						<p>The provable fair Obyte Lottery</p>
 					</header>
  -->
 				<!-- Nav -->
